--- a/src/components/coa-tree/template.html
+++ b/src/components/coa-tree/template.html
@@ -1,6 +1,6 @@
 <div class="card coa-tree shadow p-2 m-2">
     <div class="card-header bg-primary">
-        <h2 class="text-center text-white">Chart of Account</h2>
+        <h2 class="text-center text-white">Chart of Accounts</h2>
     </div>
     <div class="card-body no-gutter">
         <div id="tree"></div>
